--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@types/node": "^25.0.8",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
-    "better-sqlite3": "^12.6.0",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "lucide-react": "^0.562.0",
@@ -30,7 +30,6 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/better-sqlite3": "^7.6.12"
+    "@types/bcryptjs": "^2.4.6"
   }
 }
