--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#8b5ef4",
+  "theme_color": "#000000",
   "orientation": "portrait",
   "icons": [
     {
