--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19.2.3",
     "react-easy-crop": "^5.5.6",
     "recharts": "^3.7.0",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "zustand": "^5.0.10"
